<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="100"
        android:key="sim_sampling_time"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_sim_sampling_time"
        android:dialogMessage="@string/pref_sim_sampling_time_desc"/>

    <EditTextPreference
        android:defaultValue="1000"
        android:key="sim_sampling_tolerance"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_sim_tolerance"
        android:dialogMessage="@string/pref_sim_tolerance_desc"/>

</PreferenceScreen>