<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.skgadi.controltoolboxtimedomain.SettingsActivity$SimulationFragment"
        android:icon="@drawable/icon_simulate_start"
        android:title="@string/pref_header_simulation" />

    <header
        android:fragment="com.skgadi.controltoolboxtimedomain.SettingsActivity$GraphFragment"
        android:icon="@drawable/icon_simulate_start"
        android:title="@string/pref_header_graphs" />

    <header
        android:fragment="com.skgadi.controltoolboxtimedomain.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.skgadi.controltoolboxtimedomain.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.skgadi.controltoolboxtimedomain.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
